--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "devforge",
   "version": "1.0.0",
   "description": "> **Stop reinventing project structures. Start building faster.**",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "bin": {
+    "devforge": "dist/index.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "test": "jest --passWithNoTests",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -16,5 +25,28 @@
   "bugs": {
     "url": "https://github.com/QuayeDNA/devforge/issues"
   },
-  "homepage": "https://github.com/QuayeDNA/devforge#readme"
+  "homepage": "https://github.com/QuayeDNA/devforge#readme",
+  "dependencies": {
+    "chalk": "^5.6.2",
+    "commander": "^14.0.1",
+    "fs-extra": "^11.3.2",
+    "handlebars": "^4.7.8",
+    "inquirer": "^12.9.6",
+    "joi": "^18.0.1",
+    "ora": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "^9.0.9",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.5.2",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
+    "eslint": "^9.36.0",
+    "husky": "^9.1.7",
+    "jest": "^30.1.3",
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.4.4",
+    "typescript": "^5.9.2"
+  }
 }
