--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/QuayeDNA/devforge.git"
+    "url": "git+https://github.com/QuayeDNA/skaflow.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/QuayeDNA/devforge/issues"
+    "url": "https://github.com/QuayeDNA/skaflow/issues"
   },
-  "homepage": "https://github.com/QuayeDNA/devforge#readme",
+  "homepage": "https://github.com/QuayeDNA/skaflow#readme",
   "dependencies": {
     "chalk": "^5.6.2",
     "commander": "^14.0.1",
