--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true
+        "moduleResolution": "bundler",
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src/**/*"
