--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
         "declaration": true,
         "declarationMap": true,
         "sourceMap": true,
-        "moduleResolution": "bundler",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true
     },
